wider the width of .super-outer-container - give enough room for .outer-container - prevent the horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -44,5 +44,6 @@ p {
 
 .super_outer_container {
   max-height: 98vh;
+  min-width: 541px;
   overflow: auto;
 }
